# py-sqlc-tester

./: .gitignore  README.md  docker-compose.yaml  hello.py  pyproject.toml  shell.dockerfile  sqlc.yaml
db/: schema.sql
db/migrations/: 20260201215127_first_migration.sql  20260201215425_second_mig.sql  20260201222035_books_table.sql  20260328202128_transactions.sql
db/queries/: books.sql  transactions.sql
src/: query.py
src/py_sqlc_tester/: authors.py  config.py
src/py_sqlc_tester/db/: __init__.py  authors.py  config.py  models.py  transactions.py
